[package]
name = "yingzi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
rustls = "0.23.15"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.0"
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-stream = { version = "0.1.16", features = ["net"] }

[[bin]]
name = "benti"
path = "src/benti.rs"
